# Csv2Cpp

./: .gitmodules  Activity.csv  CMakeLists.txt  Condition.csv  Csv2Cpp.cmake  CsvConfigInsts.cpp  CsvConfigInsts.h  Utils.hpp  csv.hpp  main.cpp  template.cpp  template.h  test.cc  test.cmake
testdata/: TwoIndex.csv
testdata/Linux/: OneIndex.csv
testdata/Linux/SubDir/: TwoIndex.csv
testdata/Windows/: OneIndex.csv
